--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       </header>
       <div class="explore">
-        <div data-aos="fade-right" class="left">
+        <div data-aos="zoom-in" class="left">
           <h1>
             Changing <br />
             your <span>eating</span><br />
@@ -71,7 +71,7 @@
             ></i>
           </nav>
         </div>
-        <div data-aos="fade-left" class="right">
+        <div data-aos="zoom-in" class="right">
           <nav>
             <img
               src="./Girl_eating_chocolate_stock_photo__Image_of_child__pink_-_14386904-removebg-preview.png"
@@ -121,7 +121,7 @@
       </div>
 
       <div id="value">
-        <div data-aos="fade-right" class="left">
+        <div data-aos="zoom-in" class="left">
           <nav>
             <img
               src="./Girl_eating_chocolate_stock_photo__Image_of_child__pink_-_14386904-removebg-preview.png"
@@ -129,7 +129,7 @@
             />
           </nav>
         </div>
-        <div data-aos="fade-left" class="right">
+        <div data-aos="zoom-in" class="right">
           <h1><i class="fa-solid fa-diamond"></i>Its Our Value To Help You</h1>
           <p>
            Always want to provide best value for you and your health jion us <br> to maximize the benefit
@@ -178,12 +178,12 @@
 
     <div id="services">
       <div class="in-services">
-        <h3 data-aos="fade-right"><i class="fa-solid fa-receipt"></i> Try Our Healthy Menu</h3>
-        <p data-aos="fade-right">
+        <h3 data-aos="zoom-in"><i class="fa-solid fa-receipt"></i> Try Our Healthy Menu</h3>
+        <p data-aos="zoom-in">
           We provide you a variety of healthy reciepe that have <br>been currate by our best nutrition for you
         </p>
         <div  class="try">
-          <div data-aos="fade-right" class="left">
+          <div data-aos="zoom-in" class="left">
            <div class="left-card"> <h1><i class="fa-solid fa-clock"></i> Breakfast Recipe</h1></div>
            <div class="left-card"><h1><i style="background-color: #ffd96b;" class="fa-solid fa-share"></i> Low Calori Recipe</h1></div>
            <div class="left-card"><h1 ><i class="fa-solid fa-calendar-days"></i> Holiday Reciepe</h1></div>
@@ -194,7 +194,7 @@
            <div class="left-card"><h1><i class="fa-solid fa-lock"></i> Restriction Reciepe</h1></div>
           </div>
           <div class="right">
-            <div data-aos="fade-left" class="in-right">
+            <div data-aos="zoom-in" class="in-right">
               <div class="red"><h4>Red onion with chooped cavage</h4> <a style="text-decoration: none; href="#"><button class="btn">Try Now</button></a></div>
               <div class="low"> <h4>Red onion with chooped cavage</h4> <a style="text-decoration: none;" href="#"><button class="btn">Try Now</button></a></div>
             </div>
@@ -205,10 +205,10 @@
 
     <div id="news">
       <div class="in-news">
-        <div data-aos="fade-right" class="left-news">
+        <div data-aos="zoom-in" class="left-news">
           <nav><img src="./Pretty_Blonde_Woman_Holding_Red_Apple_Stock_Photo_131226041___Shutterstock-removebg-preview.png" alt=""></nav>
         </div>
-        <div data-aos="fade-left" class="right-news">
+        <div data-aos="zoom-in" class="right-news">
           <nav><i style="background-color: #ffd96b; color: #0066cc; padding: 15px; border-radius: 10px;" class="fa-solid fa-share"></i><h1>Testimonial About Us</h1></nav>
           <p>in the smallest case we always give the best, <br>Find out what other users hav to say about us.</p>
           <div class="rara"><i style="background-color: #ffd96b; position: relative; left: 20px; bottom: 20px; color: #0066cc; border: 5px solid whitesmoke;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); padding: 15px; border-radius: 10px;" class="fa-solid fa-calendar-days"></i>
@@ -220,11 +220,11 @@
 
     <footer>
       <div  id="in-footer">
-        <div data-aos="fade-right" class="left">
+        <div data-aos="zoom-in" class="left">
           <h1 style="color: #0066cc; font-size: 1.8em;">Eatly</h1>
           <p>We Engage in Sugar confections include sweet, sugar-based foods, which are usually eaten as snack food. This includes sugar candies, chocolates, candied fruits and nuts, chewing gum, and sometimes ice cream. In some cases, chocolate confections are treated as a separate category, as are sugar-free versions of sugar confections.</p>
         </div>
-        <div data-aos="fade-left" class="right">
+        <div data-aos="zoom-in" class="right">
           <div class="about">
             <h1>About</h1>
             <p>About Us</p>
